[package]
name = "s3-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.0"
aws-sdk-s3 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
thiserror = "1.0"
anyhow = "1.0"
tower = "0.4"
futures = "0.3"
bytes = "1.0" 